--- a/testUI/views/00_layout.pug
+++ b/testUI/views/00_layout.pug
@@ -3,9 +3,11 @@ html(lang="en")
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    link(rel="stylesheet", href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css")
+    link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css' integrity='sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm' crossorigin='anonymous')
     link(rel="stylesheet", href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css")
-    link(rel="stylesheet", href="/stylesheets/styles.css")
+    link(rel="stylesheet", href="https://unpkg.com/leaflet-draw@1.0.4/dist/leaflet.draw.css")
+    link(rel="stylesheet", href="/stylesheets/styles.css") 
+    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css")
     title CLIMAID
   body
     nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
@@ -13,24 +15,32 @@ html(lang="en")
         img.d-inline-block.align-top(src="/stylesheets/logo.png", width="30", height="30", alt="Logo", style="margin-right: 10px;")
         | CLIMAID
       div.collapse.navbar-collapse#navbarNav
-        ul.navbar-nav
+        ul.navbar-nav.mr-auto
           li.nav-item
-            a.nav-link(href="#") Home
-          li.nav-item
-            a.nav-link(href="/Assests") Assets
+            a.nav-link(href="/Assets") Assets
           li.nav-item
             a.nav-link(href="/Insights") Insights
           li.nav-item.active
             a.nav-link(href="/RiskReport") Risk Report
+        ul.navbar-nav.ml-auto
           li.nav-item
-            a.nav-link(href="Contact") Contact
+            a.nav-link(href="#") 
+              i.fas.fa-user-plus
+          li.nav-item.dropdown
+            a.nav-link(href="#", role="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false")
+              i.fas.fa-ellipsis-v
+            .dropdown-menu.dropdown-menu-right
+              a.dropdown-item(href="#") Contact
+              a.dropdown-item(href="#") Imprint
+
       button.navbar-toggler(type="button", data-toggle="collapse", data-target="#navbarNav", aria-controls="navbarNav", aria-expanded="false", aria-label="Toggle navigation")
         span.navbar-toggler-icon
     main
         block content
-    script(src="https://code.jquery.com/jquery-3.5.1.slim.min.js")
-    script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js")
-    script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js")
+    script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous")
+    script(src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous")
+    script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous")
     script(src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.js")
+
 
